fix: responsive background and poster alignment

--- a/src/components/Seances/Seances.module.css
+++ b/src/components/Seances/Seances.module.css
@@ -16,6 +16,7 @@
 .content {
     display: flex;
     gap: 15px;
+    align-items: center;
 }
 
 .poster {
@@ -114,17 +115,16 @@
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
-@media (min-width: 391px) and (max-width: 768px) {
-    
-}
 
-@media (max-width: 576px) {
+
+@media (max-width: 768px) {
     .content {
         flex-direction: column;
+        align-items: flex-start;
     }
 
     .poster {
-        align-self: center;
+        align-self: flex-start;
     }
 
     .info::after {
